cmd/modelg/parser/generated/sqlquery_parser.go
// Code generated from SQLQueryParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package generated // SQLQueryParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SQLQueryParser struct {
	*antlr.BaseParser
}

var SQLQueryParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlqueryparserParserInit() {
	staticData := &SQLQueryParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'--'", "':'", "", "", "", "", "'when'", "'<when'", "'+when'", "",
		"", "", "", "", "", "'.'", "'!'",
	}
	staticData.SymbolicNames = []string{
		"", "STARTCOMMENT", "STARTEXPR", "EOL", "WS", "SQLTEXT", "STARTQUERY",
		"STARTWHEN", "STARTCHOMPWHEN", "STARTJOINWHEN", "ENDWHEN", "ENDCOMMENT",
		"RAWCOMMENT", "QUERY_NAME", "ENDQUERY", "IDENT", "IDENT_SEP", "IDENT_LITERAL",
		"SPACE_EXPR", "WS_EXPR",
	}
	staticData.RuleNames = []string{
		"querySet", "query", "sqlChunk", "sqlLine", "sqlFragment", "sqlText",
		"whenDirective", "chompWhenDirective", "joinWhen", "expr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SQLQueryParserInit initializes any static state used to implement SQLQueryParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSQLQueryParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SQLQueryParserInit() {
	staticData := &SQLQueryParserParserStaticData
	staticData.once.Do(sqlqueryparserParserInit)
}

// NewSQLQueryParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSQLQueryParser(input antlr.TokenStream) *SQLQueryParser {
	SQLQueryParserInit()
	this := new(SQLQueryParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SQLQueryParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SQLQueryParser.g4"

	return this
}

// SQLQueryParser tokens.
const (
	SQLQueryParserEOF            = antlr.TokenEOF
	SQLQueryParserSTARTCOMMENT   = 1
	SQLQueryParserSTARTEXPR      = 2
	SQLQueryParserEOL            = 3
	SQLQueryParserWS             = 4
	SQLQueryParserSQLTEXT        = 5
	SQLQueryParserSTARTQUERY     = 6
	SQLQueryParserSTARTWHEN      = 7
	SQLQueryParserSTARTCHOMPWHEN = 8
	SQLQueryParserSTARTJOINWHEN  = 9
	SQLQueryParserENDWHEN        = 10
	SQLQueryParserENDCOMMENT     = 11
	SQLQueryParserRAWCOMMENT     = 12
	SQLQueryParserQUERY_NAME     = 13
	SQLQueryParserENDQUERY       = 14
	SQLQueryParserIDENT          = 15
	SQLQueryParserIDENT_SEP      = 16
	SQLQueryParserIDENT_LITERAL  = 17
	SQLQueryParserSPACE_EXPR     = 18
	SQLQueryParserWS_EXPR        = 19
)

// SQLQueryParser rules.
const (
	SQLQueryParserRULE_querySet           = 0
	SQLQueryParserRULE_query              = 1
	SQLQueryParserRULE_sqlChunk           = 2
	SQLQueryParserRULE_sqlLine            = 3
	SQLQueryParserRULE_sqlFragment        = 4
	SQLQueryParserRULE_sqlText            = 5
	SQLQueryParserRULE_whenDirective      = 6
	SQLQueryParserRULE_chompWhenDirective = 7
	SQLQueryParserRULE_joinWhen           = 8
	SQLQueryParserRULE_expr               = 9
)

// IQuerySetContext is an interface to support dynamic dispatch.
type IQuerySetContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllQuery() []IQueryContext
	Query(i int) IQueryContext

	// IsQuerySetContext differentiates from other interfaces.
	IsQuerySetContext()
}

type QuerySetContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQuerySetContext() *QuerySetContext {
	var p = new(QuerySetContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_querySet
	return p
}

func InitEmptyQuerySetContext(p *QuerySetContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_querySet
}

func (*QuerySetContext) IsQuerySetContext() {}

func NewQuerySetContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QuerySetContext {
	var p = new(QuerySetContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLQueryParserRULE_querySet

	return p
}

func (s *QuerySetContext) GetParser() antlr.Parser { return s.parser }

func (s *QuerySetContext) EOF() antlr.TerminalNode {
	return s.GetToken(SQLQueryParserEOF, 0)
}

func (s *QuerySetContext) AllQuery() []IQueryContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IQueryContext); ok {
			len++
		}
	}

	tst := make([]IQueryContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IQueryContext); ok {
			tst[i] = t.(IQueryContext)
			i++
		}
	}

	return tst
}

func (s *QuerySetContext) Query(i int) IQueryContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQueryContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *QuerySetContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QuerySetContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QuerySetContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.EnterQuerySet(s)
	}
}

func (s *QuerySetContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.ExitQuerySet(s)
	}
}

func (s *QuerySetContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLQueryParserVisitor:
		return t.VisitQuerySet(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLQueryParser) QuerySet() (localctx IQuerySetContext) {
	localctx = NewQuerySetContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLQueryParserRULE_querySet)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(21)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == SQLQueryParserSTARTQUERY {
		{
			p.SetState(20)
			p.Query()
		}

		p.SetState(23)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(25)
		p.Match(SQLQueryParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetQueryName returns the queryName token.
	GetQueryName() antlr.Token

	// SetQueryName sets the queryName token.
	SetQueryName(antlr.Token)

	// GetQueryBody returns the queryBody rule contexts.
	GetQueryBody() ISqlChunkContext

	// SetQueryBody sets the queryBody rule contexts.
	SetQueryBody(ISqlChunkContext)

	// Getter signatures
	STARTQUERY() antlr.TerminalNode
	QUERY_NAME() antlr.TerminalNode
	SqlChunk() ISqlChunkContext

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	antlr.BaseParserRuleContext
	parser    antlr.Parser
	queryName antlr.Token
	queryBody ISqlChunkContext
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_query
	return p
}

func InitEmptyQueryContext(p *QueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_query
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLQueryParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) GetQueryName() antlr.Token { return s.queryName }

func (s *QueryContext) SetQueryName(v antlr.Token) { s.queryName = v }

func (s *QueryContext) GetQueryBody() ISqlChunkContext { return s.queryBody }

func (s *QueryContext) SetQueryBody(v ISqlChunkContext) { s.queryBody = v }

func (s *QueryContext) STARTQUERY() antlr.TerminalNode {
	return s.GetToken(SQLQueryParserSTARTQUERY, 0)
}

func (s *QueryContext) QUERY_NAME() antlr.TerminalNode {
	return s.GetToken(SQLQueryParserQUERY_NAME, 0)
}

func (s *QueryContext) SqlChunk() ISqlChunkContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISqlChunkContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISqlChunkContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (s *QueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLQueryParserVisitor:
		return t.VisitQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLQueryParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SQLQueryParserRULE_query)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(27)
		p.Match(SQLQueryParserSTARTQUERY)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(28)

		var _m = p.Match(SQLQueryParserQUERY_NAME)

		localctx.(*QueryContext).queryName = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(29)

		var _x = p.SqlChunk()

		localctx.(*QueryContext).queryBody = _x
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISqlChunkContext is an interface to support dynamic dispatch.
type ISqlChunkContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllSqlLine() []ISqlLineContext
	SqlLine(i int) ISqlLineContext
	AllWhenDirective() []IWhenDirectiveContext
	WhenDirective(i int) IWhenDirectiveContext
	AllChompWhenDirective() []IChompWhenDirectiveContext
	ChompWhenDirective(i int) IChompWhenDirectiveContext
	AllSqlFragment() []ISqlFragmentContext
	SqlFragment(i int) ISqlFragmentContext

	// IsSqlChunkContext differentiates from other interfaces.
	IsSqlChunkContext()
}

type SqlChunkContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySqlChunkContext() *SqlChunkContext {
	var p = new(SqlChunkContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_sqlChunk
	return p
}

func InitEmptySqlChunkContext(p *SqlChunkContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_sqlChunk
}

func (*SqlChunkContext) IsSqlChunkContext() {}

func NewSqlChunkContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SqlChunkContext {
	var p = new(SqlChunkContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLQueryParserRULE_sqlChunk

	return p
}

func (s *SqlChunkContext) GetParser() antlr.Parser { return s.parser }

func (s *SqlChunkContext) AllSqlLine() []ISqlLineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISqlLineContext); ok {
			len++
		}
	}

	tst := make([]ISqlLineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISqlLineContext); ok {
			tst[i] = t.(ISqlLineContext)
			i++
		}
	}

	return tst
}

func (s *SqlChunkContext) SqlLine(i int) ISqlLineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISqlLineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISqlLineContext)
}

func (s *SqlChunkContext) AllWhenDirective() []IWhenDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IWhenDirectiveContext); ok {
			len++
		}
	}

	tst := make([]IWhenDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IWhenDirectiveContext); ok {
			tst[i] = t.(IWhenDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *SqlChunkContext) WhenDirective(i int) IWhenDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhenDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhenDirectiveContext)
}

func (s *SqlChunkContext) AllChompWhenDirective() []IChompWhenDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IChompWhenDirectiveContext); ok {
			len++
		}
	}

	tst := make([]IChompWhenDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IChompWhenDirectiveContext); ok {
			tst[i] = t.(IChompWhenDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *SqlChunkContext) ChompWhenDirective(i int) IChompWhenDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChompWhenDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChompWhenDirectiveContext)
}

func (s *SqlChunkContext) AllSqlFragment() []ISqlFragmentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISqlFragmentContext); ok {
			len++
		}
	}

	tst := make([]ISqlFragmentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISqlFragmentContext); ok {
			tst[i] = t.(ISqlFragmentContext)
			i++
		}
	}

	return tst
}

func (s *SqlChunkContext) SqlFragment(i int) ISqlFragmentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISqlFragmentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISqlFragmentContext)
}

func (s *SqlChunkContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SqlChunkContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SqlChunkContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.EnterSqlChunk(s)
	}
}

func (s *SqlChunkContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.ExitSqlChunk(s)
	}
}

func (s *SqlChunkContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLQueryParserVisitor:
		return t.VisitSqlChunk(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLQueryParser) SqlChunk() (localctx ISqlChunkContext) {
	localctx = NewSqlChunkContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SQLQueryParserRULE_sqlChunk)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = 1
	for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1:
			p.SetState(40)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}

			switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
			case 1:
				{
					p.SetState(31)
					p.SqlLine()
				}

			case 2:
				p.SetState(35)
				p.GetErrorHandler().Sync(p)
				if p.HasError() {
					goto errorExit
				}
				_la = p.GetTokenStream().LA(1)

				for _la == SQLQueryParserSTARTEXPR || _la == SQLQueryParserSQLTEXT {
					{
						p.SetState(32)
						p.SqlFragment()
					}

					p.SetState(37)
					p.GetErrorHandler().Sync(p)
					if p.HasError() {
						goto errorExit
					}
					_la = p.GetTokenStream().LA(1)
				}
				{
					p.SetState(38)
					p.WhenDirective()
				}

			case 3:
				{
					p.SetState(39)
					p.ChompWhenDirective()
				}

			case antlr.ATNInvalidAltNumber:
				goto errorExit
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(42)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISqlLineContext is an interface to support dynamic dispatch.
type ISqlLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOL() antlr.TerminalNode
	AllSqlFragment() []ISqlFragmentContext
	SqlFragment(i int) ISqlFragmentContext

	// IsSqlLineContext differentiates from other interfaces.
	IsSqlLineContext()
}

type SqlLineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySqlLineContext() *SqlLineContext {
	var p = new(SqlLineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_sqlLine
	return p
}

func InitEmptySqlLineContext(p *SqlLineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_sqlLine
}

func (*SqlLineContext) IsSqlLineContext() {}

func NewSqlLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SqlLineContext {
	var p = new(SqlLineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLQueryParserRULE_sqlLine

	return p
}

func (s *SqlLineContext) GetParser() antlr.Parser { return s.parser }

func (s *SqlLineContext) EOL() antlr.TerminalNode {
	return s.GetToken(SQLQueryParserEOL, 0)
}

func (s *SqlLineContext) AllSqlFragment() []ISqlFragmentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISqlFragmentContext); ok {
			len++
		}
	}

	tst := make([]ISqlFragmentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISqlFragmentContext); ok {
			tst[i] = t.(ISqlFragmentContext)
			i++
		}
	}

	return tst
}

func (s *SqlLineContext) SqlFragment(i int) ISqlFragmentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISqlFragmentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISqlFragmentContext)
}

func (s *SqlLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SqlLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SqlLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.EnterSqlLine(s)
	}
}

func (s *SqlLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.ExitSqlLine(s)
	}
}

func (s *SqlLineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLQueryParserVisitor:
		return t.VisitSqlLine(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLQueryParser) SqlLine() (localctx ISqlLineContext) {
	localctx = NewSqlLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SQLQueryParserRULE_sqlLine)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SQLQueryParserSTARTEXPR || _la == SQLQueryParserSQLTEXT {
		{
			p.SetState(44)
			p.SqlFragment()
		}

		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(50)
		p.Match(SQLQueryParserEOL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISqlFragmentContext is an interface to support dynamic dispatch.
type ISqlFragmentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SqlText() ISqlTextContext
	Expr() IExprContext

	// IsSqlFragmentContext differentiates from other interfaces.
	IsSqlFragmentContext()
}

type SqlFragmentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySqlFragmentContext() *SqlFragmentContext {
	var p = new(SqlFragmentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_sqlFragment
	return p
}

func InitEmptySqlFragmentContext(p *SqlFragmentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLQueryParserRULE_sqlFragment
}

func (*SqlFragmentContext) IsSqlFragmentContext() {}

func NewSqlFragmentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SqlFragmentContext {
	var p = new(SqlFragmentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLQueryParserRULE_sqlFragment

	return p
}

func (s *SqlFragmentContext) GetParser() antlr.Parser { return s.parser }

func (s *SqlFragmentContext) SqlText() ISqlTextContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISqlTextContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISqlTextContext)
}

func (s *SqlFragmentContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *SqlFragmentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SqlFragmentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SqlFragmentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.EnterSqlFragment(s)
	}
}

func (s *SqlFragmentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLQueryParserListener); ok {
		listenerT.ExitSqlFragment(s)
	}
}

func (s *SqlFragmentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLQueryParserVisitor:
		return t.VisitSqlFragment(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLQueryParser) SqlFragment() (localctx ISqlFragmentContext) {
	localctx = NewSqlFragmentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SQLQueryParserRULE_sqlFragment)
	p.EnterOuterAlt(localctx, 1)
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case SQLQueryParserSQLTEXT:
		{
			p.SetState(52)
			p.SqlText()
		}

	case SQLQueryParserSTARTEXPR:
		{
			p.SetState(53)
			p.Expr()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISqlTextContext is an interface to support dynamic dispatch.
type ISqlTextContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_SQLTEXT returns the _SQLTEXT token.
	Get_SQLTEXT() antlr.Token

	// Set_SQLTEXT sets the _SQLTEXT token.
	Set_SQLTEXT(antlr.Token)

	// GetTextFragments returns the textFragments token list.
	GetTextFragments() []antlr.Token

	// SetTextFragments sets the textFragments token list.
	SetTextFragments([]antlr.Token)

	// Getter signatures
	AllSQLTEXT() []antlr.TerminalNode
	SQLTEXT(i int) antlr.TerminalNode

	// IsSqlTextContext differentiates from other interfaces.
	IsSqlTextContext()
}

type SqlTextContext struct {
	antlr.BaseParserRuleContext
	parser        antlr.Parser
	_SQLTEXT      antlr.Token
	textFragments []antlr.Token
}
